--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-social-login-buttons": "^3.9.1",
+    "reactjs-social-login": "^2.6.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
