--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "emoji-picker-react": "^4.5.16",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
