--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "emoji-picker-react": "^4.5.16",
+    "emoji-picker-react": "^4.9.2",
+    "lenis": "^1.0.45",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-animated-modal": "^1.1.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-profile": "^1.3.3",
     "react-redux": "^8.1.3",
     "react-social-login-buttons": "^3.9.1",
     "reactjs-social-login": "^2.6.3"
